--- a/CsharpExercises/CsharpExercises.csproj
+++ b/CsharpExercises/CsharpExercises.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CsharpExercises</RootNamespace>
     <AssemblyName>CsharpExercises</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,8 @@
     <Compile Include="Exercises\Exercise12.cs" />
     <Compile Include="Exercises\Exercise13.cs" />
     <Compile Include="Exercises\Exercise14.cs" />
+    <Compile Include="Exercises\Exercise15\Testpaper.cs" />
+    <Compile Include="Exercises\Exercise16.cs" />
     <Compile Include="Exercises\Exercise2.cs" />
     <Compile Include="Exercises\Exercise3.cs" />
     <Compile Include="Exercises\Exercise4.cs" />
@@ -57,6 +60,8 @@
     <Compile Include="Exercises\Exercise7.cs" />
     <Compile Include="Exercises\Exercise8.cs" />
     <Compile Include="Exercises\Exercise9.cs" />
+    <Compile Include="Exercises\LinqExercise\CardDeck.cs" />
+    <Compile Include="Exercises\LinqExercise\Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
